--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
-    "@types/react-table": "^7.7.14",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint-config-react-app": "^7.0.1",
